<resources>
    <string name="app_name">Fito</string>
    <string name="txtfastingsub">Money is not everything</string>
    <string name="txtfastingimg">Fasting Img</string>
    <string name="btnget">Get Started</string>
    <string name="btnstart">Start Now</string>
    <string name="txttime">00:00:00</string>
    <string name="txtfastingtimer">Fasting Timer</string>
    <string name="btnstop1">Finish Fasting</string>
    <string name="txtplanssub">Set daily fasting and water consumption plans</string>
    <string name="btnsave">Save</string>
    <string name="btncancel">Cancel</string>
    <string name="txtdate">2021/10/12</string>
    <string name="txtwtime">10:00 AM</string>
    <string name="txtrepeat">Repeat Once</string>
    <string name="txtreno">2 Times</string>
    <string name="txtbegwplan">Title</string>
    <string name="txtwatertarget">Daily Water Consumption Target</string>
    <string name="txtconrepat">2000ml</string>
    <string name="txtdrinked">0</string>
    <string name="txtrepeattype">Repeat Type</string>
    <string name="txtfastingtype">Weekdays</string>
    <string name="txtwateruse">Daily Water Consumption</string>
    <string name="txtfastandwaterc">"Fasting and Water Consumption Plans "</string>
    <string name="txtreset">Reset</string>
    <string name="txthello">Hello</string>
    <string name="txtdemoname">Demo Name</string>
    <string name="txtdecription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla</string>
    <string name="btngo">Let\'s Go!</string>
    <string name="txtaboutyou">About You</string>
    <string name="txtwelcomename">Name</string>
    <string name="inputentername">Enter Name</string>
    <string name="inputbirthday">Birthday</string>
    <string name="inputbirthdayspace">yyyy/mm/dd</string>
    <string name="txtgender">Gender</string>
    <string name="radiomalechecked">Male</string>
    <string name="radiofemale">Female</string>
    <string name="btnsavedetails">Save</string>
    <string name="txtdailygoalsfasting">Fasting</string>
    <string name="txttitledaily">Daily</string>
    <string name="txttitlegoals">Goals</string>
    <string name="txtdailygoalsdescription">Set a daily goal</string>
    <string name="txtdailygoalswater">Water Consumption</string>
    <string name="txtfastingtime">Time</string>
    <string name="txtfastingrepeat">Repeat</string>
    <string name="txtfastingnoofreat">No of Repeat</string>
    <string name="txtfasting">Fasting</string>
    <string name="txtfastingplans">Plans</string>
    <string name="txtfasttoplan">Fast according to a plan</string>
    <string name="txtfastingbeginner">Beginner</string>
    <string name="txtfastingbeginneredit">Edit</string>
    <string name="txtfastingbeginnerdelete">Delete</string>
    <string name="txtfastinginter">Intermediate</string>
    <string name="txtfastinginteredit">Edit</string>
    <string name="txtfastinginterdelete">Delete</string>
    <string name="txtfastingexpert">Expert</string>
    <string name="txtfastingexpertedit">Edit</string>
    <string name="txtfastingexpertdelete">Delete</string>
    <string name="txtwaterconsumption">Water Consumption</string>
    <string name="txtwaterplans">Plans</string>
    <string name="txtwaterbeginner">Beginner</string>
    <string name="txtwaterinter">Intermediate</string>
    <string name="txtwaterexpert">Expert</string>
    <string name="txtwaterbeginneredit">Edit</string>
    <string name="txtwaterbeginnerdelete">Delete</string>
    <string name="txtwaterinteredit">Edit</string>
    <string name="txtinterwaterdelete">Delete</string>
    <string name="txtwaterexpertedit">Edit</string>
    <string name="txtwaterexpertdelete">Delete</string>
    <string name="times"> Times</string>
    <string name="consumption">Consumption</string>
    <string name="ml">ml</string>



    <!-- Dimashi's Strings -->
    <string name="topic_height">Let\'s Calculate Your BMI</string>
    <string name="bmi_weight">Weight</string>
    <string name="topic_healthjournal">Health Journal</string>
    <string name="progress_cardname">Progress</string>
    <string name="date1">20/11/2020</string>
    <string name="d_my_weight1">Weight</string>
    <string name="d_dltHistoryBtn">Delete History</string>
    <string name="d_my_bmi1">BMI</string>
    <string name="topic_personaldata">Personal Data</string>
    <string name="d_currentweight">Current Weight</string>
    <string name="d_desiredweight">Desired Weight</string>
    <string name="bmiTime1">10.00 am</string>
    <string name="wheight_value1">108 kg</string>
    <string name="bmivalue1">37.3</string>
    <string name="date2">08/01/2021</string>
    <string name="bmiTime2">04.24 pm</string>
    <string name="wheight_value2">79 kg</string>
    <string name="bmivalue2">28.63</string>
    <string name="currentheight">Height</string>
    <string name="kgtext">kg</string>
    <string name="cmtext">cm</string>
    <string name="savebtn_d1">SAVE</string>
    <string name="calmethod1btn">cm/kg</string>
    <string name="calmethod2btn">ft/lb</string>
    <string name="greeting1">Good Evening</string>
    <string name="greetingname1">Amali</string>
    <string name="newweightbtn1">Record new weight</string>
    <string name="topicdetails">Personal Details</string>
    <string name="calculatebtn">CALCULATE</string>
    <string name="resetbtn">RESET</string>
    <string name="date">Date</string>
    <string name="desiredHeight">Height</string>
    <string name="desiredBMI">BMI</string>
    <string name="agerange">Age Range</string>
    <string name="enterageRange">Age Range</string>
    <string name="bmirange">BMI Range</string>
    <string name="enterbmirange">BMI Range</string>
    <string name="bmicategory">BMI Category</string>
    <string name="enterbmicategory">BMI Category</string>
    <string name="description">Description</string>
    <string name="rbtnFemale">Female</string>
    <string name="rbtnmale">Male</string>
    <!-- Dimashi's Strings -->
</resources>