<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/progress_bg"
    tools:context=".Progress">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/blue5"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <!-- card-view widget -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="117dp">

            <!--ImageVIew to display our Course Image
            <ImageView
                android:id="@+id/idIVCourseImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:src="@drawable/gfgimage" />-->

            <!--Text View to display Course Name-->

            <!--Text VIew to display Course Rating-->
            <!--Image used in present in drawable folder-->


            <TextView
                android:id="@+id/d_date2"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/date2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/d_my_weight2"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/d_date2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="18dp"
                android:drawablePadding="2dp"
                android:fontFamily="@font/asap_medium"
                android:text="@string/d_my_weight1" />

            <TextView

                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/d_my_weight2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="18dp"
                android:drawablePadding="2dp"
                android:fontFamily="@font/asap_medium"
                android:text="@string/d_my_bmi1" />

            <TextView
                android:id="@+id/bmiTime2"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/asap_bold"
                android:text="@string/bmiTime2" />

            <TextView
                android:id="@+id/weight_value2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bmiTime2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="130dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/wheight_value2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weight_value2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="132dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/bmivalue2" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="117dp">

            <!--ImageVIew to display our Course Image
            <ImageView
                android:id="@+id/idIVCourseImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:src="@drawable/gfgimage" />-->

            <!--Text View to display Course Name-->

            <!--Text VIew to display Course Rating-->
            <!--Image used in present in drawable folder-->





            <TextView
                android:id="@+id/bmiTime1"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/asap_bold"
                android:text="@string/bmiTime1" />





        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="@color/grey4dark"
        android:fontFamily="@font/asap"
        android:text="@string/d_dltHistoryBtn"
        android:textColor="@color/white"
        app:cornerRadius="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</RelativeLayout>

